--- a/css/main.css
+++ b/css/main.css
@@ -761,7 +761,7 @@ h2 {
     -webkit-column-gap: 165px;
        -moz-column-gap: 165px;
             column-gap: 165px;
-    row-gap: 30px;
+    row-gap: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -771,17 +771,6 @@ h2 {
     -webkit-box-pack: start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-  }
-}
-
-.footer__break-row {
-  display: none;
-  width: 100%;
-  height: 0;
-}
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .footer__break-row {
-    display: block;
   }
 }
 
@@ -827,6 +816,9 @@ h2 {
   }
 }
 
+.address__item:not(:last-child) {
+  margin-bottom: 8px;
+}
 @media screen and (min-width: 1200px) {
   .address__item:not(:last-child) {
     margin-bottom: 9px;
@@ -1061,7 +1053,6 @@ h2 {
   left: 0;
   right: 0;
   bottom: 0;
-  padding: 48px 40px;
   background-color: #ffffff;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -1069,6 +1060,19 @@ h2 {
   transition: -webkit-transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
+}
+
+.mobile_menu__wrapper {
+  width: 100%;
+  height: 796px;
+  padding: 48px 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .mobile-menu.is-open {
@@ -1110,10 +1114,6 @@ h2 {
   fill: #2196f3;
 }
 
-.mobile-menu__nav-site-list {
-  margin-bottom: 302px;
-}
-
 .mobile-menu__nav-site-item:not(:last-child) {
   margin-bottom: 32px;
 }
@@ -1135,10 +1135,18 @@ h2 {
 }
 
 .mobile-menu__contacts-list {
+  margin-top: auto;
   margin-bottom: 64px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
 }
 
-.mobile-menu__contacts-item:not(:last-child) {
+.mobile-menu__contacts-item:not(:first-child) {
   margin-bottom: 32px;
 }
 
@@ -1153,6 +1161,11 @@ h2 {
   line-height: 1.18;
   color: #2196f3;
 }
+@media screen and (max-width: 479.98px) {
+  .mobile-menu__contacts-link--phone {
+    font-size: 32px;
+  }
+}
 .mobile-menu__contacts-link--email {
   font-size: 24px;
   line-height: 1.17px;
@@ -1166,6 +1179,9 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
 }
 
 .mobile-menu__soc-netw-item {
@@ -1175,14 +1191,11 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-.mobile-menu__soc-netw-item:nth-child(n+2)::before {
-  content: "";
-  margin: 0 10px;
-  display: inline-block;
+  padding-right: 10px;
   height: 22px;
-  width: 1px;
-  background-color: rgba(33, 33, 33, 0.2);
+}
+.mobile-menu__soc-netw-item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
 
 .mobile-menu__soc-netw-link {
