--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -5,11 +5,19 @@
     right: 0;
     bottom: 0;
 
-    padding: 48px 40px;
     background-color: $primary-backgrcolor;
 
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
+}
+
+.mobile_menu__wrapper {
+    width: 100%;
+    height: 796px;
+
+    padding: 48px 40px;
+    display: flex;
+    flex-direction: column;
 }
 
 .mobile-menu.is-open {
@@ -47,9 +55,6 @@
     }
 }
 
-.mobile-menu__nav-site-list {
-    margin-bottom: 302px;
-}
 .mobile-menu__nav-site-item {
     &:not(:last-child) {
         margin-bottom: 32px;
@@ -70,10 +75,14 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-menu__contacts-list {
+    margin-top: auto;
     margin-bottom: 64px;
+
+    display: flex;
+    flex-direction: column-reverse;
 }
 .mobile-menu__contacts-item {
-    &:not(:last-child) {
+    &:not(:first-child) {
         margin-bottom: 32px;
     }
 }
@@ -83,6 +92,9 @@
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &--phone {
+        @media screen and (max-width: 479.98px) {
+            font-size: 32px;
+        }
         font-size: 34px;
         line-height: 1.18;
 
@@ -99,19 +111,19 @@
 .mobile-menu__soc-netw-list {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+
+    gap: 10px;
 }
 .mobile-menu__soc-netw-item {
     display: flex;
     align-items: center;
 
-    &:nth-child(n + 2)::before {
-        content: '';
-        margin: 0 10px;
-        display: inline-block;
-        height: 22px;
-        width: 1px;
+    padding-right: 10px;
+    height: 22px;
 
-        background-color: rgba(33, 33, 33, 0.2);
+    &:not(:last-child) {
+        border-right: 1px solid rgba(33, 33, 33, 0.2);
     }
 }
 .mobile-menu__soc-netw-link {
