--- a/css/main.css
+++ b/css/main.css
@@ -58,7 +58,7 @@ h2 {
 }
 
 .container {
-  min-width: 360px;
+  width: 100%;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
@@ -413,7 +413,6 @@ h2 {
 
 .hero__title {
   max-width: 360px;
-  min-width: 360px;
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
@@ -433,8 +432,6 @@ h2 {
 
 .hero__btn {
   padding: 10px 24px;
-  min-width: 200px;
-  height: 50px;
   background-color: #2196f3;
   color: #ffffff;
   border-width: 0;
@@ -1051,8 +1048,6 @@ h2 {
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
   background-color: #ffffff;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -1060,11 +1055,8 @@ h2 {
   transition: -webkit-transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
-}
-
-.mobile_menu__wrapper {
   width: 100%;
-  height: 796px;
+  height: 100%;
   padding: 48px 40px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1163,7 +1155,7 @@ h2 {
 }
 @media screen and (max-width: 479.98px) {
   .mobile-menu__contacts-link--phone {
-    font-size: 32px;
+    font-size: 27px;
   }
 }
 .mobile-menu__contacts-link--email {
