--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -2,18 +2,13 @@
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
 
     background-color: $primary-backgrcolor;
 
     transform: translateX(100%);
     transition: transform 250ms ease-in-out;
-}
-
-.mobile_menu__wrapper {
     width: 100%;
-    height: 796px;
+    height: 100%;
 
     padding: 48px 40px;
     display: flex;
@@ -93,7 +88,7 @@
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &--phone {
         @media screen and (max-width: 479.98px) {
-            font-size: 32px;
+            font-size: 27px;
         }
         font-size: 34px;
         line-height: 1.18;
