--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,9 +1,19 @@
 .filter__list {
     display: flex;
-    justify-content: center;
-    gap: 8px;
+    flex-wrap: wrap;
+    justify-content: left;
+    gap: 15px 8px;
 
-    margin-bottom: 50px;
+    margin-bottom: 40px;
+
+    @media screen and (min-width: $tablet) {
+        justify-content: center;
+
+        margin-bottom: 30px;
+    }
+    @media screen and (min-width: $desktop) {
+        margin-bottom: 50px;
+    }
 }
 
 .filter__btn {
@@ -42,14 +52,18 @@
 .example__list {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
 }
 
 .example__item {
-    &:not(:nth-child(3n)) {
-        margin-right: 30px;
+    width: 100%;
+
+    @media screen and (min-width: $tablet) {
+        width: calc((100% - 30px) / 2);
     }
-    &:not(:nth-last-child(-n + 3)) {
-        margin-bottom: 30px;
+
+    @media screen and (min-width: $desktop) {
+        width: calc((100% - 60px) / 3);
     }
 }
 
@@ -62,13 +76,6 @@
     &:focus {
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
             1px 4px 6px rgba(0, 0, 0, 0.16);
-    }
-}
-
-.example__img {
-    display: block;
-    @media screen and (min-width: $desktop) {
-        max-width: 370px;
     }
 }
 
