--- a/sass/components/_section-hero copy.scss
+++ b/sass/components/_section-hero copy.scss
@@ -6,23 +6,31 @@
     height: 400px;
 
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        image-set(
-            url('../../images/mobile-img/hero/hero-mobile.jpg') 1x,
-            url('../../images/mobile-img/hero/hero-mobile@2x.jpg') 2x
-        );
+        url('../images/mobile-img/hero/hero-mobile.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     background-color: rgba(47, 48, 58, 0.4);
 
+    @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+            url('../images/mobile-img/hero/hero-mobile@2x.jpg');
+    }
+
     @media screen and (min-width: $tablet) {
         max-width: 768px;
 
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            image-set(
-                url('../../images/tablet-img/hero/hero-tablet.jpg') 1x,
-                url('../../images/tablet-img/hero/hero-tablet@2x.jpg') 2x
-            );
+            url('../images/tablet-img/hero/hero-tablet.jpg');
+
+        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+            background-image: linear-gradient(
+                    to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)
+                ),
+                url('../images/tablet-img/hero/hero-tablet@2x.jpg');
+        }
     }
 
     @media screen and (min-width: $desktop) {
@@ -30,10 +38,16 @@
         height: 600px;
 
         background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            image-set(
-                url('../images/desktop-img/hero/hero-desk.jpg') 1x,
-                url('../images/desktop-img/hero/hero-desk@2x.jpg') 2x
-            );
+            url('../images/desktop-img/hero/hero-desk.jpg');
+
+        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+            background-image: linear-gradient(
+                    to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)
+                ),
+                url('../images/desktop-img/hero/hero-desk@2x.jpg');
+        }
     }
 }
 
