--- a/css/main.css
+++ b/css/main.css
@@ -353,9 +353,9 @@ h2 {
   padding: 0;
   max-width: 480px;
   height: 400px;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), image-set(url("../../images/mobile-img/hero/hero-mobile.jpg") 1x, url("../../images/mobile-img/hero/hero-mobile@2x.jpg") 2x);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url("../../images/mobile-img/hero/hero-mobile.jpg") 1x, url("../../images/mobile-img/hero/hero-mobile@2x.jpg") 2x);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), image-set(url("../../images/mobile-img/hero/hero-mobile.jpg") 1x, url("../../images/mobile-img/hero/hero-mobile@2x.jpg") 2x);
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), image-set(url("../images/mobile-img/hero/hero-mobile.jpg") 1x, url("../images/mobile-img/hero/hero-mobile@2x.jpg") 2x);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url("../images/mobile-img/hero/hero-mobile.jpg") 1x, url("../images/mobile-img/hero/hero-mobile@2x.jpg") 2x);
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), image-set(url("../images/mobile-img/hero/hero-mobile.jpg") 1x, url("../images/mobile-img/hero/hero-mobile@2x.jpg") 2x);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -364,9 +364,9 @@ h2 {
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), image-set(url("../../images/tablet-img/hero/hero-tablet.jpg") 1x, url("../../images/tablet-img/hero/hero-tablet@2x.jpg") 2x);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url("../../images/tablet-img/hero/hero-tablet.jpg") 1x, url("../../images/tablet-img/hero/hero-tablet@2x.jpg") 2x);
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), image-set(url("../../images/tablet-img/hero/hero-tablet.jpg") 1x, url("../../images/tablet-img/hero/hero-tablet@2x.jpg") 2x);
+    background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), image-set(url("../images/tablet-img/hero/hero-tablet.jpg") 1x, url("../images/tablet-img/hero/hero-tablet@2x.jpg") 2x);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), -webkit-image-set(url("../images/tablet-img/hero/hero-tablet.jpg") 1x, url("../images/tablet-img/hero/hero-tablet@2x.jpg") 2x);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), image-set(url("../images/tablet-img/hero/hero-tablet.jpg") 1x, url("../images/tablet-img/hero/hero-tablet@2x.jpg") 2x);
   }
 }
 @media screen and (min-width: 1200px) {
